--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-mt/control-y-tabla-actuacion-mt.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-mt/control-y-tabla-actuacion-mt.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaMesaTrabajoAct" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar actualización a mesa de trabajo</a><br>
+<a routerLink="/gestionarTramiteControversiasContractuales/registrarNuevaMesaTrabajoAct/{{this.controversiaId}}/{{this.idMesaTrabajo}}/0" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar actualización a mesa de trabajo</a><br>
 <div style="margin-top: 2em;">
     <div class="busqueda">
         <mat-form-field appearance="outline" class="busqueda--input">
