--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/registrar-nueva-mesatrabajo-cc/registrar-nueva-mesatrabajo-cc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/registrar-nueva-mesatrabajo-cc/registrar-nueva-mesatrabajo-cc.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarTramiteControversia/{{this.idcontroversia}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
@@ -10,5 +10,5 @@
     <p class="info-sub-title">
         <span>Solicitud: <b>{{this.solicitud}}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Número del contrato: <b>{{this.numContrato}}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo de controversia: <b>{{ this.tipoControversia}}</b></span>
     </p>
-    <app-form-registrar-mesa-de-trabajo [idActuacion]="this.idActuacion" [isEditable]=false></app-form-registrar-mesa-de-trabajo>
+    <app-form-registrar-mesa-de-trabajo [idControversia]="this.idcontroversia" [idActuacion]="this.idActuacion" [isEditable]=false></app-form-registrar-mesa-de-trabajo>
 </div>
