--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-reclamacion/control-y-tabla-actuacion-reclamacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/control-y-tabla-actuacion-reclamacion/control-y-tabla-actuacion-reclamacion.component.html
@@ -45,7 +45,7 @@
             <ng-container matColumnDef="gestion">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Gestión </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoActuacion=='En proceso de registro'"
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoActuacion=='En proceso de registro' && element.estadoRegistro=='Incompleto'"
                     (click)="this.enviarComiteTecnicoTramAct(element.actuacionSeguimientoId)">
                         Finalizar actuación
                     </button>
@@ -57,7 +57,7 @@
                     (click)="this.eliminarActuacion(element.actuacionSeguimientoId)">
                         Eliminar
                     </button>
-                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoActuacion=='Finalizada'"
+                    <button mat-raised-button color="accent" class="btn-table" *ngIf="element.estadoActuacion=='Finalizada' && element.estadoRegistro=='Completo'"
                     (click)="this.verDetalleActuacion(element.actuacionSeguimientoId)">
                         Ver detalle
                     </button>
