--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-mt/ver-detalle-actuacion-mt.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalle-actuacion-mt/ver-detalle-actuacion-mt.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarMesaTrabajo" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarMesaTrabajo/{{this.idControversia}}/{{this.idMesa}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
