--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-actuacion-mt/ver-detalleeditar-actuacion-mt.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-tramite-controversias-contractuales/components/ver-detalleeditar-actuacion-mt/ver-detalleeditar-actuacion-mt.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <div class="text-right">
-        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarMesaTrabajo" mat-button color="primary" class="btn-regresar">
+        <a routerLink="/gestionarTramiteControversiasContractuales/actualizarMesaTrabajo/{{this.idControversia}}/{{this.idMesa}}" mat-button color="primary" class="btn-regresar">
             <img src="assets/img/icon/regresar.svg" alt="Regresar">
         </a>
     </div>
@@ -10,5 +10,5 @@
     <p class="info-sub-title">
         <span>Solicitud: <b>{{this.solicitud}}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Número del contrato: <b>{{this.numContrato}}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tipo de controversia: <b>{{ this.tipoControversia}}</b></span>
     </p>
-    <app-form-registrar-mesa-de-trabajo-act [idSeguimientoMesa]="this.idSeguimientoMesa" [isEditable]="true"></app-form-registrar-mesa-de-trabajo-act>
+    <app-form-registrar-mesa-de-trabajo-act  [idControversia]=this.idControversia [mesaID]=this.idMesa [idSeguimientoMesa]="this.idSeguimientoMesa" [isEditable]="true"></app-form-registrar-mesa-de-trabajo-act>
 </div>
