--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/mapa-entidad-inst-educativa/mapa-entidad-inst-educativa.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/mapa-entidad-inst-educativa/mapa-entidad-inst-educativa.component.html
@@ -95,8 +95,8 @@
                     </div>
                 </div>
                 <div class="text-center mb-2em">
-                    <button mat-button color="warn" class="btn-guardar" type="submit">
-                        <img src="assets/img/icon/guardar.svg" alt="Regresar">
+                    <button mat-button color="primary" class="btn-guardar" type="submit">
+                        <img class="img-size" src="assets/img/icon/filtrar-1.svg" alt="Regresar">
                     </button>
                 </div>
             </div>
