--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-subsanacion/dialog-subsanacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/dialog-subsanacion/dialog-subsanacion.component.html
@@ -3,14 +3,21 @@
 </button>
 <div style="padding: 10px; text-align: center;">
     <h1 class="title-menu--h1 centerTrick">
-        Observaciones item 2
+        Observaciones item {{ data.jIndex + 1 }}
     </h1>
     <p class="info-sub-title">
-        <span>Número de solicitud: <b>SolPagoO0001</b></span>
-        <span>Número de contrato: <b>N801801</b></span>
+        <ng-container *ngIf="data.esExpensas === true; else noEsExpensas">
+            <span>Número de solicitud: <b> {{ data.dataSolicitud.numeroSolicitud }} </b></span>
+            <span>Llave MEN: <b> {{ data.dataSolicitud.contratacionProyecto.proyecto.llaveMen }} </b></span>
+        </ng-container>
+        <ng-template #noEsExpensas>
+            <span>Número de solicitud: <b> {{ data.dataSolicitud.solicitudPagoOnly.numeroSolicitud }} </b></span>
+            <span>Número de contrato: <b> {{ data.dataSolicitud.numeroContrato }} </b></span>
+        </ng-template>
+        
     </p>
     <p>
-        Copia de la resolución de facturación vigente
+        {{ data.registro.listaChequeoItem.nombre }}
     </p>
     <mat-card class="shipping-card var-main-gris" style="margin-top: 1em;">
         <mat-card-header class="header-card header-card--margin">
@@ -19,7 +26,8 @@
             </mat-card-title>
         </mat-card-header>
         <mat-card-content style="text-align: left; margin-bottom: 2em;">
-            <p>No se cuenta con la copia pero sí con el original</p>
+            <section [innerHTML]="data.registro.verificacionObservacion" *ngIf="data.registro.verificacionObservacion !== undefined"></section>
+            <section [innerHTML]="data.registro.validacionObservacion" *ngIf="data.registro.validacionObservacion !== undefined"></section>
         </mat-card-content>
     </mat-card>
 </div>
