--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/registrar-validar-requisitos-pago/registrar-validar-requisitos-pago.component.html
@@ -99,7 +99,9 @@
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
-                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador">
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera">
                                 Ver detalle/Editar
                         </button>
 
@@ -155,7 +157,9 @@
                                 *ngIf=" element.estadoCodigo === listaEstadoSolicitudPago.enProcesoRegistro
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudRevisadaEquipoFacturacion
                                         || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaApoyoSupervision
-                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador"> 
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.solicitudDevueltaPorCoordinador
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionVerificacionFinanciera
+                                        || element.estadoCodigo === listaEstadoSolicitudPago.enviadaSubsanacionValidacionFinanciera"> 
                                 Ver detalle/Editar
                         </button>
 
