--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/validar-lista-chequeo/validar-lista-chequeo.component.html
@@ -64,11 +64,23 @@
                     <ng-container matColumnDef="observaciones">
                         <th mat-header-cell *matHeaderCellDef mat-sort-header> Observaciones </th>
                         <td mat-cell *matCellDef="let element; index as j" align="center">
-                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==1" *ngIf="element.respuestaCodigo === noCumpleCodigo"
-                                (click)="getObservacion( element, i, j )">Observaciones</button>
+                            <button mat-raised-button
+                                    color="accent"
+                                    class="btn-table "
+                                    [class.sin-diligenciar]="element.item==1"
+                                    *ngIf="element.respuestaCodigo === noCumpleCodigo"
+                                    (click)="getObservacion( element, i, j )">
+                                    Observaciones
+                            </button>
     
-                            <button mat-raised-button color="accent" class="btn-table " [class.sin-diligenciar]="element.item==2" *ngIf="element.item==2"
-                                (click)="this.callSubsanacion()">Observaciones</button>
+                            <button mat-raised-button
+                                    color="accent"
+                                    class="btn-table "
+                                    [class.sin-diligenciar]="element.item==2"
+                                    *ngIf="element.tieneSubsanacion === true"
+                                    (click)="observacionSubsanacion( element, j )">
+                                    Observaciones
+                            </button>
                                 
                         </td>
                     </ng-container>
