--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-novedad/registrar-revision-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/registrar-revision-novedad/registrar-revision-novedad.component.html
@@ -6,18 +6,18 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" for="fechaEnvioSolicitud" [class.color-secondaryColor]="
-                addressForm.get('fechaEnvioSolicitud').invalid && addressForm.get('fechaEnvioSolicitud').touched ||
-                addressForm.get('fechaEnvioSolicitud').invalid && estaEditando">
-                Fecha de solicitud de la novedad
+              <label class="label-left" for="fechaEnvioGestionContractual" [class.color-secondaryColor]="
+                addressForm.get('fechaEnvioGestionContractual').invalid && addressForm.get('fechaEnvioGestionContractual').touched ||
+                addressForm.get('fechaEnvioGestionContractual').invalid && estaEditando">
+                Fecha de envío de solicitud al grupo de gestión contractual
               </label>
             </div>
             <div class="col d-flex">
               <mat-form-field class="example-full-width">
-                <input matInput [matDatepicker]="pickerEnvioSolicitud" formControlName="fechaEnvioSolicitud"
+                <input matInput [matDatepicker]="pickerEnvioSolicitud" formControlName="fechaEnvioGestionContractual"
                   readonly (click)="pickerEnvioSolicitud.open()" placeholder="DD/MM/AAAA" required>
                 <mat-datepicker #pickerEnvioSolicitud></mat-datepicker>
-              </mat-form-field>
+              </mat-form-field> 
               <button mat-button color="primary" type="button" (click)="pickerEnvioSolicitud.open()"
                 class="btn-calendario">
                 <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
@@ -30,15 +30,15 @@
         <div class="col-md-12">
           <div class="row">
             <div class="pr-1">
-              <label class="label-left" for="estadoDelProceso" [class.color-secondaryColor]="
-                addressForm.get('estadoDelProceso').invalid && addressForm.get('estadoDelProceso').touched ||
-                addressForm.get('estadoDelProceso').invalid && estaEditando">
-                Instancia donde se presentó la solicitud
+              <label class="label-left" for="estadoProcesoCodigo" [class.color-secondaryColor]="
+                addressForm.get('estadoProcesoCodigo').invalid && addressForm.get('estadoProcesoCodigo').touched ||
+                addressForm.get('estadoProcesoCodigo').invalid && estaEditando">
+                Estado del proceso
               </label>
             </div>
             <div class="col">
               <mat-form-field class="select-width">
-                <mat-select required formControlName="estadoDelProceso">
+                <mat-select required formControlName="estadoProcesoCodigo">
                   <mat-option *ngFor="let instancia of estadoDelProcesoArray" [value]="instancia.value">
                     {{ instancia.name }}
                   </mat-option>
@@ -48,20 +48,20 @@
           </div>
         </div>
       </div>
-      <div class="animatedDown" *ngIf="addressForm.get('estadoDelProceso').value === '1'">
+      <div class="animatedDown" *ngIf="addressForm.get('estadoProcesoCodigo').value === '1'">
         <div class="row">
           <div class="col-md-12">
             <div class="row">
               <div class="pr-1">
-                <label class="label-left" for="fechaSolicitudNovedad" [class.color-secondaryColor]="
-                  addressForm.get('fechaSolicitudNovedad').invalid && addressForm.get('fechaSolicitudNovedad').touched ||
-                  addressForm.get('fechaSolicitudNovedad').invalid && estaEditando">
-                  Fecha de solicitud de la novedad
+                <label class="label-left" for="fechaAprobacionGestionContractual" [class.color-secondaryColor]="
+                  addressForm.get('fechaAprobacionGestionContractual').invalid && addressForm.get('fechaAprobacionGestionContractual').touched ||
+                  addressForm.get('fechaAprobacionGestionContractual').invalid && estaEditando">
+                  Fecha de aprobación del grupo de gestión contractual
                 </label>
               </div>
               <div class="col d-flex">
                 <mat-form-field class="example-full-width">
-                  <input matInput [matDatepicker]="pickerSolicitudNovedad" formControlName="fechaSolicitudNovedad"
+                  <input matInput [matDatepicker]="pickerSolicitudNovedad" formControlName="fechaAprobacionGestionContractual"
                     readonly (click)="pickerSolicitudNovedad.open()" placeholder="DD/MM/AAAA" required>
                   <mat-datepicker #pickerSolicitudNovedad></mat-datepicker>
                 </mat-form-field>
@@ -77,15 +77,15 @@
           <div class="col-md-12">
             <div class="row">
               <div class="pr-1">
-                <label class="label-left" for="nombreAbogadoPresentoSolicitud" [class.color-secondaryColor]="
-                  addressForm.get('nombreAbogadoPresentoSolicitud').invalid && addressForm.get('nombreAbogadoPresentoSolicitud').touched ||
-                  addressForm.get('nombreAbogadoPresentoSolicitud').invalid && estaEditando">
-                  Instancia donde se presentó la solicitud
+                <label class="label-left" for="abogadoRevisionId" [class.color-secondaryColor]="
+                  addressForm.get('abogadoRevisionId').invalid && addressForm.get('abogadoRevisionId').touched ||
+                  addressForm.get('abogadoRevisionId').invalid && estaEditando">
+                  Nombre del abogado que realizó la revisión
                 </label>
               </div>
               <div class="col">
                 <mat-form-field class="select-width">
-                  <mat-select required formControlName="nombreAbogadoPresentoSolicitud">
+                  <mat-select required formControlName="abogadoRevisionId">
                     <mat-option *ngFor="let instancia of nombreAbogadoPresentoSolicitudArray" [value]="instancia.value">
                       {{ instancia.name }}
                     </mat-option>
@@ -96,55 +96,7 @@
           </div>
         </div>
       </div>
-      <div class="animatedDown" *ngIf="addressForm.get('estadoDelProceso').value === '1'">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="pr-1">
-                <label class="label-left" for="fechaAprobacionGrupoGestionContractual" [class.color-secondaryColor]="
-                  addressForm.get('fechaAprobacionGrupoGestionContractual').invalid && addressForm.get('fechaAprobacionGrupoGestionContractual').touched ||
-                  addressForm.get('fechaAprobacionGrupoGestionContractual').invalid && estaEditando">
-                  Fecha de solicitud de la novedad
-                </label>
-              </div>
-              <div class="col d-flex">
-                <mat-form-field class="example-full-width">
-                  <input matInput [matDatepicker]="pickerSolicitudNovedad" formControlName="fechaAprobacionGrupoGestionContractual"
-                    readonly (click)="pickerSolicitudNovedad.open()" placeholder="DD/MM/AAAA" required>
-                  <mat-datepicker #pickerSolicitudNovedad></mat-datepicker>
-                </mat-form-field>
-                <button mat-button color="primary" type="button" (click)="pickerSolicitudNovedad.open()"
-                  class="btn-calendario">
-                  <img src="assets/img/icon/calendarioCirculo.svg" alt="Abrir Calendario">
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="pr-1">
-                <label class="label-left" for="nombreAbogadorealizoRevision" [class.color-secondaryColor]="
-                  addressForm.get('nombreAbogadorealizoRevision').invalid && addressForm.get('nombreAbogadorealizoRevision').touched ||
-                  addressForm.get('nombreAbogadorealizoRevision').invalid && estaEditando">
-                  Instancia donde se presentó la solicitud
-                </label>
-              </div>
-              <div class="col">
-                <mat-form-field class="select-width">
-                  <mat-select required formControlName="nombreAbogadorealizoRevision">
-                    <mat-option *ngFor="let instancia of nombreAbogadorealizoRevisionArray" [value]="instancia.value">
-                      {{ instancia.name }}
-                    </mat-option>
-                  </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
+      
     </mat-card-content>
   </mat-card>
   <div class="text-center">
